--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -7,38 +7,151 @@
     <head>
         <meta charset="utf-8">
         <title>SM Ticket | DrX API</title>
+        <style>
+            h1 {
+                margin: 10px;
+            }
+        </style>
     </head>
   <body style="background-color: rgb(24,24,24); color:white;">
 
-    <!-- Events & Venues -->
-    <h1 id="drx-events">Events and Venues</h1>
+    
+
+
+
+
+
+
+
+
+    
+
+  <!-- Events -->
+  <h1 id="drx-events">Events</h1>
     <div class="table" style="color:white;">
-    <table>
-        <tbody>
-            {% for s in events %}
-            <tr class="drx">
-                <td>
-                    <a href="{{ s.link }}"><img src="{{ s.image }}" alt="" width="200" height="250"></a>
-                </td>
-                <td>
-                    <a href="{{ s.link }}">{{ s.title }}</a>
-                </td>
-                <td>
-                    <p>
-                        Location: {{ s.location }}
-                    </p>
-                </td>
-                <td>
-                    <p>
+        <table style="margin-left: auto; margin-right: auto;">
+            <tbody>
+                {% for s in events %}
+                <tr class="drx">
+                    <td>
+                        <a href="{{ s.link }}"><img src="{{ s.image }}" alt="" width="200" height="250"></a>
+                    </td>
+                    <td>
+                        <a href="{{ s.link }}">{{ s.title }}</a>
+                    </td>
+                    <td>
+                        <p>
+                            Location: {{ s.location }}
+                        </p>
+                    </td>
+                    <td>
+                        <p>
                         Date: {{ s.date }}
-                    </p>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-  </div>
-  
-  </body>
+                        </p>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-primary">Automate</button>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+  <!-- SM Venues -->
+    <h1 id="drx-smvenues">SM Venues</h1>
+    <div class="table" style="color:white;">
+        <table style="margin-left: auto; margin-right: auto;">
+            <tbody>
+                {% for s in smvenues %}
+                <tr class="drx">
+                    <td>
+                        <a href="{{ s.link }}"><img src="{{ s.image }}" alt="" width="200" height="250"></a>
+                    </td>
+                    <td>
+                        <a href="{{ s.link }}">{{ s.title }}</a>
+                    </td>
+                    <td>
+                        <p>
+                            Location: {{ s.location }}
+                        </p>
+                    </td>
+                    <td>
+                        <p>
+                        Date: {{ s.date }}
+                        </p>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-primary">Automate</button>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <!-- SM Other Venues -->
+    <h1 id="drx-othervenues">Other Venues</h1>
+    <div class="table" style="color:white;">
+        <table style="margin-left: auto; margin-right: auto;">
+            <tbody>
+                {% for s in othervenues %}
+                <tr class="drx">
+                    <td>
+                        <a href="{{ s.link }}"><img src="{{ s.image }}" alt="" width="200" height="250"></a>
+                    </td>
+                    <td>
+                        <a href="{{ s.link }}">{{ s.title }}</a>
+                    </td>
+                    <td>
+                        <p>
+                            Location: {{ s.location }}
+                        </p>
+                    </td>
+                    <td>
+                        <p>
+                        Date: {{ s.date }}
+                        </p>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-primary">Automate</button>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Attractions -->
+    <h1 id="drx-attractions">Attractions</h1>
+    <div class="table" style="color:white;">
+        <table style="margin-left: auto; margin-right: auto;">
+            <tbody>
+                {% for s in attractions %}
+                <tr class="drx">
+                    <td>
+                        <a href="{{ s.link }}"><img src="{{ s.image }}" alt="" width="200" height="250"></a>
+                    </td>
+                    <td>
+                        <a href="{{ s.link }}">{{ s.title }}</a>
+                    </td>
+                    <td>
+                        <p>
+                            Location: {{ s.location }}
+                        </p>
+                    </td>
+                    <td>
+                        <p>
+                        Date: {{ s.date }}
+                        </p>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-primary">Automate</button>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </html>
 {% endblock content %}
