--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -7,16 +7,22 @@
     <script src="sweetalert2.min.js"></script>
     <!-- Bootstrapper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/b1071bc281.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     {% include 'include/header.html' %}
-
+    {% include 'include/footer.html' %}
+    
     {% block content %}
 
 
 
     {% endblock %}
+
+    
 </body>
 
 <!-- Bootstrapper -->
